# ft

./: .gitignore  CODE_REVIEW.md  COMMANDS.md  INSTALLATION.md  INSTALLATION_FM.md  LICENSE  QUICKSTART_AR.md  QUICK_START.md  QUICK_START_AR.md  README.md  RECOMMENDATIONS.md  UPDATE.md  USAGE.md  pyproject.toml
ai_translate/: __init__.py  audit.py  cache.py  cli.py  context_profile.py  db_scope.py  db_write.py  extractors.py  fixers.py  gettext_sync.py  language_memory.py  manager.py  output.py  policy.py  progress.py  review.py  storage.py  translation_contract.py  translator.py
tests/: __init__.py  test_language_memory.py  test_policy.py  test_storage.py
