[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-translate"
version = "1.0.0"
description = "AI-powered translation system for Frappe / ERPNext"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Baron Systems", email = "info@baron-systems.com"}
]
keywords = ["frappe", "erpnext", "translation", "i18n", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "groq>=0.4.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.scripts]
ai-translate = "ai_translate.cli:cli_entrypoint"

[tool.setuptools]
packages = ["ai_translate"]

[tool.setuptools.package-data]
ai_translate = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

